--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -197,7 +197,7 @@ header .search-btn i {
   text-align: center;
 }
 #Location img {
-  max-width: 100%;
+  width: 100%;
 }
 #Footer .icon i {
   font-size: 25px;
